# pom-reader

./: .editorconfig  .gitignore  Makefile  NUL  README.md  example.py  install_dev.sh  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  dependencies.yml  docs.yml  manual.yml  matrix.yml  performance.yml  quality.yml  release.yml  security.yml  test-workflows.yml
resources/: pom.xml
src/pom_reader/: __init__.py  cli.py  logging_config.py  models.py  parser.py  reader.py
tests/: __init__.py  test_models.py  test_parser.py
